--- a/public/styles.css
+++ b/public/styles.css
@@ -19,6 +19,15 @@ main {
     max-width: 80%;
 }
 
+/* .box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 80%;
+} */
+
 .footer {
     display: flex;
     flex-direction: column;
