--- a/public/styles.css
+++ b/public/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(https://cdn.pixabay.com/photo/2017/09/29/01/31/abstract-2797576_1280.jpg);
+    background-image: url(bg/space.jpg);
     background-color: #130e22;
 }
 
@@ -16,6 +16,10 @@ main {
     margin-left: auto;
     margin-right: auto;
     max-width: 80%;
+}
+
+td {
+    cursor: pointer;
 }
 
 .about {
